# wasi-print

./: Cargo.toml  README.md  README.tpl
.github/workflows/: rust.yml
src/: lib.rs
