[package]
name = "wasi-print"
version = "0.2.0"
edition = "2021"

[lib]
path = "src/lib.rs"
crate-type = ["rlib"]

[profile.release]
panic = "abort"

[profile.dev]
panic = "abort"

[dependencies.dlmalloc]
version = "0.2"
default-features = false
features = ["global"]

[dependencies.wasi]
version = "0.11"
default-features = false

[dependencies.compiler_builtins]
version = "0.1"
default-features = false
features = ["mem"]
