[package]
name = "wasi-print"
version = "0.2.0"
edition = "2021"
authors = ["Bart Massey <bart.massey@gmail.com>"]
description = "WASI print and panic library for WASM no_std."
license = "MIT"
repository = "https://github.com/BartMassey/wasi-print"
keywords = ["wasi", "print", "panic_handler"]
categories = ["no-std", "wasm"]

[lib]
path = "src/lib.rs"
crate-type = ["rlib"]

[profile.release]
panic = "abort"

[profile.dev]
panic = "abort"

[dependencies.dlmalloc]
version = "0.2"
default-features = false
features = ["global"]

[dependencies.wasi]
version = "0.11"
default-features = false

[dependencies.compiler_builtins]
version = "0.1"
default-features = false
features = ["mem"]

[badges.maintenance]
status = "actively-developed"
